# Kursatch

./: CMakeLists.txt
src/: Area.cpp  Area.h  CMakeLists.txt  Cell.cpp  Cell.h  Game.cpp  Game.h  Player.cpp  Player.h  ShipMovement.cpp  ShipMovement.h  ShipShot.cpp  ShipShot.h  Textures.cpp  Textures.h  main.cpp  ship.cpp  ship.h
